--- a/backdate.html
+++ b/backdate.html
@@ -10,25 +10,33 @@
         <article>
             <section>
                 <div class="pw-post-title">
-                    <h1>Backdating your Medium posts!</h1>
+                    <h1>Bitcoin Revolution</h1>
                 </div>
                 <p class="pw-post-body-paragraph">
-                    This is a test HTML page that you can import to Medium as 
-                    a template to backdate your post.
+                    Bitcoin is a digital currency which operates free of any central control or the oversight of banks or governments. 
+                    Instead it relies on peer-to-peer software and cryptography.
                 </p>
                 <p class="pw-post-body-paragraph">
-                    You'll know when you've successfully backdated your post
-                    by looking at the bottom of your article when you import
-                    to Medium: it should say something like: "Originally 
-                    published at *** on [Whatever your date is]."
+                    A public ledger records all bitcoin transactions and copies are held on servers around the world. Anyone with a spare computer can set 
+                    up one of these servers, known as a node. Consensus on who owns which coins is reached cryptographically across these nodes rather than 
+                    relying on a central source of trust like a bank.
                 </p>
                 <p class="pw-post-body-paragraph">
-                    If you enjoyed this tutorial and method, feel free to 
-                    drop me a follow on Medium and Github.
+                    Every transaction is publicly broadcast to the network and shared from node to node. Every ten minutes or so these transactions are
+                    collected together by miners into a group called a block and added permanently to the blockchain. This is the definitive account book of bitcoin.
                 </p>
                 <p class="pw-post-body-paragraph">
-                    Thanks, and bye!
+                    In much the same way you would keep traditional coins in a physical wallet, virtual currencies are held in digital wallets and can be accessed 
+                    from client software or a range of online and hardware tools.
                 </p>
+                <p class="pw-post-body-paragraph">
+                    Bitcoins can currently be subdivided by seven decimal places: a thousandth of a bitcoin is known as a milli and a hundred millionth of 
+                    a bitcoin is known as a satoshi.
+                </p>
+                <p class="pw-post-body-paragraph">
+                    In truth there is no such thing as a bitcoin or a wallet, just agreement among the network about ownership of a coin. 
+                    A private key is used to prove ownership of funds to the network when making a transaction. A person could simply memorise their private 
+                    key and need nothing else to retrieve or spend their virtual cash, a concept which is known as a “brain wallet”.                </p>
             </section>
         </article>
     </main>
